--- a/src/test/resources/compliance-checker.yaml
+++ b/src/test/resources/compliance-checker.yaml
@@ -6,3 +6,7 @@
 - ClassNameInPackageRule:
     - '.*\.entity.*'
     - '.+Entity$'
+
+- AnnotatedClassMethodReturnTypeRule:
+    - 'SampleAnnotation'
+    - 'String'
