--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                    <javadocExecutable>${JAVA_HOME}/bin/javadoc</javadocExecutable>
                 </configuration>
                 <executions>
                     <execution>
