--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <version>0.0.4-SNAPSHOT</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <description>Check your project for configured compliance rules</description>
+    <url>https://github.com/erzads/compliance-checker</url>
     <packaging>jar</packaging>
 
     <properties>
